--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "cs546-final-project",
   "version": "1.0.0",
   "description": "This is our Final Project Named ReviewSphere for CS546B",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "node test.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
-    
   },
   "repository": {
     "type": "git",
@@ -26,5 +25,15 @@
   "bugs": {
     "url": "https://github.com/nilayanurag/CS546-Final-Project/issues"
   },
-  "homepage": "https://github.com/nilayanurag/CS546-Final-Project#readme"
+  "homepage": "https://github.com/nilayanurag/CS546-Final-Project#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "email-validator": "^2.0.4",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
+    "mongo": "^0.1.0",
+    "nodemon": "^3.0.2"
+  }
 }
