--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "mongo": "^0.1.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2"
   }
 }
