--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "node test.js",
+    "test": "mocha",
     "start": "node app.js",
     "dev": "nodemon app.js",
     "seed": "node ./seeds/seedAll.js"
@@ -36,5 +36,11 @@
     "express-session": "^1.17.3",
     "mongo": "^0.1.0",
     "nodemon": "^3.0.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
   }
 }
