--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "node test.js",
     "start": "node app.js",
     "dev": "nodemon app.js",
-    "seed": "node ./seeds/seedAll.js"
+    "seed": "node seeds/seedAll.js"
   },
   "repository": {
     "type": "git",
